# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "examples/*",
    "xtask",
]
default-members = [
    "."
]

[package]
name                    = "cargo-html"
version                 = "0.0.0-git"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
repository              = "https://github.com/MaulingMonkey/cargo-html"
documentation           = "https://docs.rs/cargo-html"
license                 = "Apache-2.0 OR MIT"
readme                  = "Readme.md"
description             = "create HTML files embedding WASM from rust programs"
keywords                = ["wasm", "html"]
categories              = ["development-tools::cargo-plugins", "wasm", "web-programming"] # https://crates.io/category_slugs
metadata.html           = false

[[bin]]
name                    = "cargo-html"
path                    = "src/_cargo_html.rs"

[dependencies]
mmrbi                   = { version = "0.0.15", features = ["serde", "toml"] }
base64                  = "0.13"
cargo_metadata          = "0.12"

[profile.release]
debug                   = 0
lto                     = true
opt-level               = "z"
panic                   = "abort"
