# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "cargo-html"
version                 = "0.0.0-git"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
repository              = "https://github.com/MaulingMonkey/cargo-html"
documentation           = "https://docs.rs/cargo-html"
license                 = "Apache-2.0 OR MIT"
readme                  = "Readme.md"
description             = "create self-contained HTML programs"
keywords                = ["wasm", "html"]
categories              = ["development-tools::cargo-plugins", "wasm", "web-programming"] # https://crates.io/category_slugs
metadata.html           = false
include = [
    "/src",
    "/template",
    "/Cargo.*",
    "/LICENSE*",
    "/*.md",
]

[[bin]]
name                    = "cargo-html"
path                    = "src/_cargo_html.rs"

[features]
default = ["binaryen"]
#binaryen = [] # without binaryen, prebuilt wasm-opt binaries must exist for asyncify to work

[dependencies]
mmrbi                   = { version = "0.0.17", features = ["serde", "toml", "version"] }
binaryen                = { version = "0.12", optional = true }
base64                  = "0.13"
cargo_metadata          = "0.12"
binary-install          = "0.0.2"
serde                   = "1"
serde_json              = "1"
