# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "hello-world"
version                 = "0.0.0"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
publish                 = false

[[bin]]
name                    = "hello-world"
path                    = "hello-world.rs"
