# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "xtask"
version                 = "0.0.0"
edition                 = "2018"
publish                 = false
metadata.html           = false

[dependencies]
mmrbi                   = "0.0.15"

[[bin]]
name                    = "xtask"
path                    = "xtask.rs"
