# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members                 = ["."]

[package]
name                    = "xtask"
version                 = "0.0.0"
edition                 = "2018"
publish                 = false

[dependencies]
mmrbi                   = "0.0.16"

[[bin]]
name                    = "xtask"
path                    = "xtask.rs"
