# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "goodbye-world"
version                 = "0.0.0"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
publish                 = false

[[bin]]
name                    = "goodbye-world"
path                    = "goodbye-world.rs"

[package.metadata.html]
template                = "goodbye.html"
