# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "hello-world"
version                 = "0.0.0"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
publish                 = false

[[bin]]
name                    = "hello-world"
path                    = "hello-world.rs"

[dependencies]
libc                    = "0.2"
wasi                    = "0.10.2"
#wasm-bindgen            = "0.2"

[package.metadata.html.env]
CARGO_HTML              = "1"
RUST_BACKTRACE          = "1"

[package.metadata.html.wasi]
#sleep                   = "skip"
