# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "macroquad-demo"
version                 = "0.0.0"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
publish                 = false

[package.metadata.html]
template                = "macroquad-demo.html"

[[bin]]
name                    = "macroquad-demo"
path                    = "macroquad-demo.rs"

[dependencies]
macroquad               = { version = "0.3" }
