# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                    = "quicksilver-demo"
version                 = "0.0.0"
authors                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                 = "2018"
publish                 = false

[package.metadata.html]
cargo-web               = true

[[bin]]
name                    = "quicksilver-demo"
path                    = "quicksilver-demo.rs"

[dependencies]
quicksilver             = { version = "0.4", features = ["stdweb"] }
